# builder

./: go.mod  go.sum
builders/go116/: BUILD.bazel  builder.toml
builders/go116/stack/: build.sh
cmd/go/of_functions_framework/: main.go
cmd/go/plugins/: BUILD.bazel  buildpack.toml  main.go  template.go
cmd/go/quanxiang_lowcode_plugins/: BUILD.bazel  buildpack.toml  main.go
cmd/go/quanxiang_plugins/: BUILD.bazel  buildpack.toml  faas-lowcode  main.go  template.go
